--- a/vignettes/articles/I-gathering.Rmd
+++ b/vignettes/articles/I-gathering.Rmd
@@ -26,6 +26,7 @@ knitr::opts_knit$set(root.dir = system.file(package = "tima"))
 
 ```{r tima, include = FALSE}
 library("tima")
+tima::install()
 tima:::copy_backbone()
 ```
 
