--- a/README.Rmd
+++ b/README.Rmd
@@ -142,6 +142,7 @@ General: <https://doi.org/10.1038/s41592-019-0344-8>
 - ECMDB 2.0: <https://doi.org/10.1093/nar/gkv1060>
 - HMDB 5.0: <https://doi.org/10.1093/nar/gkab1062>
 - MassBank: <https://doi.org/10.5281/zenodo.3378723>
+- Merlin: <https://doi.org/10.5281/zenodo.13911806>
 - NPClassifier: <https://doi.org/10.1021/acs.jnatprod.1c00399>
 - ROTL: <https://doi.org/10.1111/2041-210X.12593>
 - Spectral entropy: <https://doi.org/10.1038/s41592-021-01331-z>
