--- a/vignettes/articles/II-preparing.Rmd
+++ b/vignettes/articles/II-preparing.Rmd
@@ -60,16 +60,12 @@ We use the `spectral entropy` from <https://doi.org/10.1038/s41592-021-01331-z> 
 In case, a python implementation of the spectral matching steps is also available at: <https://github.com/mandelbrot-project/spectral_lib_matcher>.
 The python version also includes other similarity measures.
 
-```{r annotate-spectra-2, results="hide", message=FALSE, warning=FALSE, include = FALSE}
-targets::tar_make(names = c(tidyselect::matches("^ann_spe_is")))
-```
-
 <!-- #### GNPS -->
 <!-- We also provide an example GNPS job id, which is: `41c6068e905d482db5698ad81d145d7c` -->
 <!-- Before running the corresponding code, do not forget to modify `params/user/prepare_*yourAnnotationTool*.yaml`. -->
 <!-- Depending on the annotation tool you used, you can format its results using: -->
 
-```{r annotate-gnps, eval=FALSE, message=FALSE, warning=FALSE, include=FALSE, results="hide"}
+```{r annotate-gnps, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 targets::tar_make(names = tidyselect::matches("^ann_spe_exp_gnp_pre"))
 ```
 
@@ -226,7 +222,7 @@ You are almost there! See already all the steps accomplished!
 
 ```{r features-all, echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 targets::tar_visnetwork(
-  names = tidyselect::matches("^ann"),
+  names = tidyselect::matches("^ann_fil"),
   exclude = c(
     "benchmark",
     "par_",
