--- a/vignettes/articles/IV-benchmarking.qmd
+++ b/vignettes/articles/IV-benchmarking.qmd
@@ -3,16 +3,29 @@ title: 4 Benchmarking Performance
 author: 
   - name: Adriano Rutz
     orcid: 0000-0003-0443-9902
+comments:
+  hypothesis:
+    showHighlights: always
 creative_commons: CC BY-SA
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+format:
+  html:
+    # code-links:
+    #  - repo: https://github.com/taxonomicallyinformedannotation/tima
+    smooth-scroll: true
+knitr:
+  opts_chunk:
+    collapse: true
+    comment: '#>'
+  opts_knit:
+    root.dir: system.file(package = "tima")
 opengraph:
     image:
       src: https://github.com/taxonomicallyinformedannotation/tima/blob/main/man/figures/logo.svg
       alt: Taxonomically Informed Metabolite Annotation
 vignette: >
   %\VignetteIndexEntry{4 Benchmarking Performance}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEngine{quarto::html}
   %\VignetteEncoding{UTF-8}
 resource_files:
   - benchmark_full_pos.svg
@@ -22,13 +35,6 @@ resource_files:
   - benchmark_zoomed_neg.svg
   - benchmark_comparison_neg.svg
 ---
-
-```{r setup, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
-)
-```
 
 This vignette simply shows the actual performance of TIMA.
 
