--- a/vignettes/articles/II-preparing.qmd
+++ b/vignettes/articles/II-preparing.qmd
@@ -1,8 +1,9 @@
 ---
 title: 2 Preparing inputs
 author: 
-  - name: Adriano Rutz
-    orcid: 0000-0003-0443-9902
+  name: Adriano Rutz
+  orcid: 0000-0003-0443-9902
+citation: true
 comments:
   hypothesis:
     showHighlights: always
@@ -13,6 +14,7 @@ format:
     # code-links:
     #  - repo: https://github.com/taxonomicallyinformedannotation/tima
     smooth-scroll: true
+google-scholar: true
 knitr:
   opts_chunk:
     collapse: true
