--- a/vignettes/tima.qmd
+++ b/vignettes/tima.qmd
@@ -1,8 +1,9 @@
 ---
 title: General comments about the infrastructure
 author: 
-  - name: Adriano Rutz
-    orcid: 0000-0003-0443-9902
+  name: Adriano Rutz
+  orcid: 0000-0003-0443-9902
+citation: true
 comments:
   hypothesis:
     showHighlights: always
@@ -13,6 +14,7 @@ format:
     # code-links:
     #  - repo: https://github.com/taxonomicallyinformedannotation/tima
     smooth-scroll: true
+google-scholar: true
 knitr:
   opts_chunk:
     collapse: true
@@ -28,10 +30,6 @@ vignette: >
   %\VignetteEngine{quarto::html}
   %\VignetteEncoding{UTF-8}
 ---
-
-```{r tima, results="hide", message=FALSE, warning=FALSE, include = FALSE}
-library("tima")
-```
 
 This vignette describes the philosophy behind the infrastructure of **TIMA**.
 
