--- a/README.Rmd
+++ b/README.Rmd
@@ -138,3 +138,11 @@ General: <https://doi.org/10.1038/s41592-019-0344-8>
 - NPClassifier: <https://doi.org/10.1021/acs.jnatprod.1c00399>
 - ROTL: <https://doi.org/10.1111/2041-210X.12593>
 - Spectral entropy: <https://doi.org/10.1038/s41592-021-01331-z>
+
+## Contributing
+
+See <https://taxonomicallyinformedannotation.github.io/tima/CONTRIBUTING.html>
+
+## Support
+
+See <https://taxonomicallyinformedannotation.github.io/tima/SUPPORT.html>
