--- a/vignettes/articles/IV-benchmarking.qmd
+++ b/vignettes/articles/IV-benchmarking.qmd
@@ -6,6 +6,8 @@ author:
 citation:
   url: https://taxonomicallyinformedannotation.github.io/tima/articles/IV-benchmarking.html
 comments:
+  giscus: 
+    repo: taxonomicallyinformedannotation/tima
   hypothesis:
     showHighlights: always
 creative_commons: CC BY-SA
