--- a/vignettes/tima.qmd
+++ b/vignettes/tima.qmd
@@ -6,6 +6,8 @@ author:
 citation:
   url: https://taxonomicallyinformedannotation.github.io/tima/articles/tima.html
 comments:
+  giscus: 
+    repo: taxonomicallyinformedannotation/tima
   hypothesis:
     showHighlights: always
 creative_commons: CC BY-SA
