--- a/vignettes/tima.qmd
+++ b/vignettes/tima.qmd
@@ -14,8 +14,6 @@ creative_commons: CC BY-SA
 date: today
 format:
   html:
-    # code-links:
-    #  - repo: https://github.com/taxonomicallyinformedannotation/tima
     smooth-scroll: true
 google-scholar: true
 knitr:
@@ -74,7 +72,7 @@ They will then be saved as YAML you will be able to share.
 To ensure optimal reproducibility and avoiding re-computing endlessly steps that did not change, we decided to build a [{targets}](https://books.ropensci.org/targets/) pipeline.
 Each step of the whole pipeline will be described next.
 
-```{r chunk-1, echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
+```{r targets, echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 library(targets)
 Sys.setenv(TAR_WARN = "false")
 targets::tar_visnetwork(
@@ -98,7 +96,7 @@ Each step is detailed in the related [vignettes](https://taxonomicallyinformedan
 
 All coming steps admit you already installed `tima`:
 
-```{r eval=FALSE, include=TRUE}
+```{r install, eval=FALSE, include=TRUE}
 install.packages(
   "tima",
   repos = c(
@@ -117,19 +115,19 @@ We now recommend you to read the [first vignette](https://taxonomicallyinformeda
 
 If you do not feel like going through all the steps, then just do 🚀:
 
-```{r eval=FALSE, include=TRUE}
+```{r run_app, eval=FALSE, include=TRUE}
 tima::run_app()
 ```
 
 If you do not even need a GUI ☠️:
 
-```{r eval=FALSE, include=TRUE}
+```{r tima_full, eval=FALSE, include=TRUE}
 tima::tima_full()
 ```
 
 In case you just want to change some small parameters between jobs, a convenience function is available:
 
-```{r eval=FALSE, include=TRUE}
+```{r change_params, eval=FALSE, include=TRUE}
 tima::change_params_small(
   fil_pat = "myExamplePattern",
   fil_fea_raw = "myExampleDir/myExampleFeatures.csv",
