--- a/vignettes/articles/II-preparing.qmd
+++ b/vignettes/articles/II-preparing.qmd
@@ -33,12 +33,11 @@ vignette: >
 
 ```{r tima, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 library("tima")
-tima:::copy_backbone()
 logger::log_threshold(
   level = logger::INFO,
   namespace = logger::log_namespaces()
 )
-tima::get_example_files()
+tima::get_example_files(in_cache = FALSE)
 targets::tar_make(
   names = tidyselect::matches("lib_sop_mer")
 )
